ilex/tests/ui/ambiguous/nums.stderr
error: unexpected closing `xyz`
 --> ambiguous/nums.txt:1:16
  |
1 | 1234%1234 1234/xyz
  |                ^^^ expected to be opened by `--xyz`
  |
  = note: reported at: ilex/src/rt/emit2.rs:254:22

error: aborting due to previous error
